# boto3-stubs

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  istub.yml  pyproject.toml
.github/workflows/: helpers.js  on_push.yml  publish_on_update.yml
boto3-stubs/resources/: base.pyi
dependency_graph/boto3-stubs/: pyproject.toml
dependency_graph/boto3-stubs-full/: pyproject.toml
dependency_graph/boto3-stubs-lite/: pyproject.toml
