[project]
name = "boto3-stubs"
version = "1.35.99"
requires-python = ">=3.8"
description = "Type annotations and code completion for boto3"
authors = [{ name = "Vlad Emelianov", email = "vlad.emelianov.nz@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["botocore", "type-annotations", "pyright", "mypy", "boto3"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Stubs Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["typing-extensions>=4.1.0; python_version<'3.9'"]

[tool.uv]
config-settings = { editable-mode = "strict" }
dev-dependencies = [
    "setuptools",
    "boto3",
    "s3transfer",
    "awscrt",
    "botocore",
    "mypy",
    "pyright",
    "istub",
    "types-s3transfer",
    "types-awscrt",
    "botocore-stubs",
    "docutils",
]

[project.urls]
Homepage = "https://github.com/youtype/boto3-stubs"
Documentation = "https://youtype.github.io/mypy_boto3_builder/"
Repository = "https://github.com/youtype/boto3-stubs"
Changelog = "https://github.com/youtype/mypy_boto3_builder/releases"
Issues = "https://github.com/youtype/mypy_boto3_builder/issues"

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ["boto3-stubs"]

[tool.pyright]
include = ["boto3-stubs"]
exclude = ["**/__pycache__", "tests", "typestubs"]
reportMissingImports = "error"
reportMissingTypeStubs = false
reportMissingTypeArgument = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = false
reportUnknownParameterType = "error"
pythonVersion = "3.8"

[tool.mypy]
python_version = "3.8"
warn_return_any = false
warn_unused_ignores = false
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
ignore_errors = false

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".git-rewrite",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "build",
    "dist",
]

line-length = 100
indent-width = 4
target-version = "py38"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "B",
    "I",
    "N",
    "D",
    "C4",
    "C90",
    "RUF",
    "PYI",
    "UP",
]
fixable = ["ALL"]
unfixable = ["B"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
exclude = ["test_*.py", "*.pyi"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
